--- a/src/index.css
+++ b/src/index.css
@@ -82,11 +82,11 @@ body {
 }
 
 .navbar.active {
-  @apply bg-blue-500 opacity-100 scale-100 blur-0 visible;
+  @apply bg-neutral-700 opacity-80 scale-100 blur-0 visible;
 }
 
 .nav-link {
-  @apply grid items-center h-9 px-4 text-sm font-medium tracking-wide text-zinc-50/50 hover:text-slate-400 transition-colors;
+  @apply grid items-center h-9 px-4 text-sm font-medium tracking-wide text-zinc-50/50 hover:text-gray-300 transition-colors;
 }
 
 .nav-link.active {
@@ -94,7 +94,7 @@ body {
 }
 
 .navbar .active-box {
-  @apply absolute bg-blue-300 rounded-lg -z-10 transition-[top,left] duration-500;
+  @apply absolute bg-stone-300 rounded-lg -z-10 transition-[top,left] duration-500;
 }
 
 /* Button */
